--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,5 @@
 .footer {
-  height: 100vh;
+  padding: 50px 0;
   width: 100%;
   display: flex;
   flex-direction: column;
@@ -9,8 +9,7 @@
 }
 
 .footer h1 {
-  margin-bottom: 2em;
-  font-size: 3em;
+  font-size: 2rem;
 }
 
 .footer h1 a {
