--- a/src/components/ScrolledView/ScrolledView.css
+++ b/src/components/ScrolledView/ScrolledView.css
@@ -1,14 +1,19 @@
 .scrolledWrapper {
   width: 100%;
-  height: 100vh;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-direction: column;
-  padding: 10px;
+  height: 150vh;
 }
 
-.scrolledWrapper svg {
+.imageWrapper {
+  width: 100%;
+  height: 100vh;
+  padding: 5px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.imageWrapper svg {
   width: 90%;
   height: 90%;
 }
